# wed

./: Cargo.toml  README.md  build.rs  justfile
.github/workflows/: release.yml
.wed/: breakpoints.json
docs/: ARCHITECTURE.md
examples/: config.toml
examples/hello_world_rust/: Cargo.toml
src/: annotations.rs  app.rs  lib.rs  main.rs
src/commands/: command_line.rs  context.rs  definitions.rs  mod.rs
src/config/: keybindings.rs  mod.rs  schema.rs  theme.rs
src/dap/: breakpoints.rs  client.rs  mod.rs  protocol.rs  session.rs  ui.rs
src/editor/: buffer.rs  cursor.rs  history.rs  marks.rs  mod.rs  motions.rs  ops.rs  registers.rs  search.rs  selection.rs  text_objects.rs
src/git/: mod.rs
src/grammars/: mod.rs
src/highlight/: grammar_registry.rs  highlighter.rs  mod.rs  theme_map.rs
src/input/: key_handler.rs  keys.rs  mod.rs  mode.rs  mouse.rs  pending.rs
src/layout/: bottom_panel.rs  mod.rs  pane.rs  sidebar.rs  split.rs  tab.rs  view.rs
src/lsp/: apply_edit.rs  capabilities.rs  client.rs  code_actions.rs  completion.rs  diagnostics.rs  hover.rs  mod.rs  protocol.rs  rename.rs  signature_help.rs
src/panes/: context_menu.rs  dap_breakpoints.rs  dap_callstack.rs  dap_variables.rs  diagnostics.rs  file_browser.rs  git.rs  git_commit.rs  git_history.rs  just.rs  lsp_problems.rs  lsp_symbols.rs  mod.rs  picker.rs  search_results.rs  terminal.rs
src/render/: bottom_panel_render.rs  command_line_ui.rs  editor_view.rs  highlight_render.rs  mod.rs  popup.rs  sidebar_render.rs  statusline.rs  tabline.rs
src/utils/: mod.rs  (+3 more)
tests/: integration.rs
(+2 files in other folders)
