[package]
name = "wed"
version = "0.1.0"
edition = "2021"
description = "A Rust-native, async, modal terminal editor"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
ropey = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6"
arboard = { version = "3", default-features = false }
unicode-width = "0.2"
unicode-segmentation = "1"
nucleo = "0.5"
dirs = "5"
async-trait = "0.1"
futures = "0.3"
regex = "1"
ignore = "0.4"
lsp-types = "0.97"
tree-sitter = "0.25"
streaming-iterator = "0.1"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-json = "0.24"
tree-sitter-md = "0.5"
tree-sitter-toml-ng = "0.7"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-yaml = "0.7"
url = "2"
once_cell = "1"
parking_lot = "0.12"
bytes = "1"
toml = "0.8"
git2 = { version = "0.20.4", default-features = false }

[target.'cfg(unix)'.dependencies]
portable-pty = "0.8"

[target.'cfg(windows)'.dependencies]
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
